# wordclockz0r

./: CMakeLists.txt  README.md
crap/: lettergen_h.py
cron/: Makefile  gen_front.py  generate.py  wordcombine.py
deprecated/: lettergen.py
docs/: frontend-to-backend.txt
estimate/gcode/: .gitignore  CMakeLists.txt  estimate-gcode.cpp
examples/Make Munich Puzzle/: generateAll.py  makeMunichLogo.inc.scad  puzzle004.scad
jobs/: BinPacking.py  README.md  example_layout.txt  gen_front.py  generate.py  wordcombine.py
jobs/83e1405adeacd22a1e63/: jobs.json
openscad/: lasercut.dxf  lasercut.scad  lasercut.stl  lasercut_test01.dxf  lasercut_test02.dxf  params.mk  params.txt
taskserver/: .gitignore  CMakeLists.txt  json.fparse  taskserver.cpp
tests/: test_doeszipexist.php  test_newjob.php
web/: config.inc.php  doeszipexist.php  index.html  index.php  newjob.php
web/css/: style.css
web/js/: script.js
web/less/: base.less
